# condenar

./: .gitignore  LICENSE  README.md
Data/: README.md
Data/ConsoleBenchmarks/: CheckpointingPerformance.xlsx  CrankTests.xlsx  README.md  SSD1963_PowerConsumption.xlsx
Data/Documentation/: Console commands.docx
Data/MainStudy/Code/: Log_Data_Analysis.ipynb  README.md
Data/MainStudy/Data/: 1_0.csv  README.md
Data/MainStudy/Data/Log_Data/: 10_0.csv  10_1.csv  11_0.csv  11_1.csv  12_0.csv  12_1.csv  13_0.csv  13_1.csv  14_0.csv  14_1.csv  16_0.csv  16_1.csv  16_2.csv  17_0.csv  18_0.csv  18_1.csv  19_0.csv  20_0.csv  21_0.csv  22_0.csv  22_1.csv  23_0.csv  25_0.csv  25_1.csv  26_0.csv  27_0.csv  28_0.csv  28_1.csv  28_2.csv  2_0.csv  2_1.csv  30_0.csv  30_1.csv  31_0.csv  32_0.csv  32_1.csv  33_0.csv  33_1.csv  34_0.csv  35_0.csv  (+61 more)
Data/MainStudy/Data/NASA-TLX/: NASA-TLX.csv  README.md
Data/MainStudy/Data/SurveyResults/: Complete_Survey_Data.csv  README.md
Data/PreliminaryUserStudy/: README.md
Data/PreliminaryUserStudy/Draft Final Data Analysis Scripts/: Data Processing.ipynb  demographic.csv  demographics.csv  model_results.csv  modified_model_results.csv  results.csv  updated_model_results.csv
Data/PreliminaryUserStudy/Experiment order tracking/: Downloaded 13 July 2023 21-47PM.docx
Data/PreliminaryUserStudy/LogProcessing/: processLogs.py
Data/PreliminaryUserStudy/MicroSDLogs/: 1_2.csv  3_0.csv  4_0.csv
Data/PreliminaryUserStudy/Results/complete CSV file/: results-survey429626 Downloaded 8 August 2023 15-22PM.csv
Data/PreliminaryUserStudy/Results/individual user console logs/: Console log from Participant 01 Collected on 28 June 2023 11-00AM.csv  Console log from Participant 02 Collected on 28 June 2023 12-00AM.csv  Console log from Participant 03 Collected on 28 June 2023 13-15PM.csv  Console log from Participant 06 Collected on 4 July 2023 11-00AM.csv  Console log from Participant 10 Collected on 17 July 2023 15-00PM.csv
Data/PreliminaryUserStudy/Survey source/LimeSurvey screenshots as presented to the participant/: README.md
Data/PreliminaryUserStudy/Survey source/LimeSurvey source file (.lss)/: limesurvey_survey_429626 Downloaded 8 August 2023 15-02PM.lss
Data/User studies/Preliminary/Experiment order tracking/: Downloaded 13 July 2023 20-57PM.docx
Data/User studies/Preliminary/Experiment procedure description/: Downloaded 13 July 2023 20-56PM.docx  (+1 more)
Hardware/: README.md
Hardware/BOM/: CrankModuleSMARTEST.xlsx  LoggingModule.xlsx  MainPCB.xlsx  NonPCB.xlsx  Other.xlsx  SolarModule.xlsx
Hardware/Enclosure/: ButtonNormal.step  ButtonPower.step  ButtonTrigger.step  EnclosureTop.step  Enclosure_Bottom.step  README.md
Hardware/PCBs/: README.md
Hardware/PCBs/CPUModule/: .gitignore  README.md  cpu-module.kicad_pcb  cpu-module.kicad_prl  cpu-module.kicad_pro  cpu-module.kicad_sch  memory.kicad_sch  mod_interface.kicad_sch
Hardware/PCBs/Logger/: TUD-LoggingPCB.pcbdoc
Hardware/PCBs/PowerModules/: README.md
Software/: README.md
Software/Console/: CMakeLists.txt  README.md
Software/Console/apps/: CMakeLists.txt
Software/Console/apps/console/: CMakeLists.txt  main.c
Software/Console/config/: ambiq-sdk.cmake  apollo-toolchain.cmake  apollo4b.ld  doom.cmake  k_startup_gcc.c
Software/Console/platform/: int-console-v1-0.h  platform.h
Software/LogProcessing/: README.md
Software/Logger/: main.cpp
Software/PCTerminal/: DoomTests.csproj  DoomTests.sln  Form1.Designer.cs  Form1.cs  Program.cs  getWSLIP.bat
Software/PCTerminal/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Software/PC_Terminal/: .gitignore  DoomTests.csproj  DoomTests.sln  Form1.Designer.cs  Form1.cs  Program.cs
Software/PC_Terminal/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
Software/StorageManager/: .gitignore  Program.cs  StorageManager.csproj
(+204 files in other folders)
